# FixedSyncPhysics

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: Task_BugFix.md  Task_Feature.md  Task_Version.md
include/FixedSyncPhysics/Math/: Fixed.hpp
src/Math/: Fixed.cpp
tests/: CMakeLists.txt  Test_Fixed.cpp
